errors/error_GROUP_030.txt

Traceback (most recent call last):
  File "evaluate_agents.py", line 171, in <module>
    agent_module = importlib.import_module('GROUPS.'+args.group+'.agent')
  File "XXX/.conda/envs/COMP579_project/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "XXX/COMP579_project/GROUPS/GROUP_030/agent.py", line 203
    try:.agent_td3_critic
        ^
SyntaxError: invalid syntax
